--- a/about/index.html
+++ b/about/index.html
@@ -118,15 +118,17 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>About me</h1>
-         <p>Hi there! My name is Henry McCarthy and I&rsquo;m a recent graduate of Macalester College where I majored in Geography and minored in Data Science and Environmental Studies. I&rsquo;m originally from San Diego, California but I currently live in Minneapolis, Minnesota. I&rsquo;ve thoroughly enjoyed exploring the Twin Cities during my time here and to the surprise of friends and family in California, I&rsquo;ve also enjoyed the long Minnesota winters.</p>
+         <p>Hi there! My name is Henry McCarthy and I&rsquo;m a recent graduate of Macalester College where I majored in Geography and minored in Data Science and Environmental Studies. Since June 2019 I have worked for the Metropolitan Council of the Twin Cities as a Water Supply Planning and Analysis Intern. At the Council I work on projects that center around GIS, design/communications, and data analysis. I have a great group of coworkers and mentors who have made my time at the Council special and rewarding.</p>
 
 <p>My interests within geography seem to change with just about every article I read, but for the past few years I&rsquo;ve honed in on the environmental side of geography and have worked to develop my technical skills in GIS and data science. While my academic and professional endeavors have taken me to one of the most rural countries in the world, Mongolia, I am also  passionate about environmental issues in urban centers. I am excited about urban ecology and sustainable city planning and I&rsquo;m eager to visit and learn about new cities in the United States and beyond.</p>
 
-<p>Cartography and design are two of my greatest passions and I hope to find a career path that allows me to blend my interest and experience in data and environmental sciences with my attention to aesthetics and compelling visualizations. I have been fortunate enough to have academic and professional experiences that have allowed me to practice my cartography and design skills while also gaining wonderful experience in the sciences.</p>
+<p>Cartography and design are two of my greatest passions and I hope to find a career path that allows me to blend my interest and experience in data and environmental sciences with my attention to storytelling, aesthetics, and compelling visualizations. I have been fortunate enough to have academic and professional experiences that have allowed me to practice my cartography and design skills while also gaining wonderful experience in the sciences.</p>
 
 <p><img src="/img/mestand.jpg" alt="This is me" /></p>
 
-<p>Beyond the classroom and workplace, I enjoy spending my free time playing the bagpipes, trying new restaurants, playing disc golf, exercising, and, <strong>of course</strong>, listening to podcasts.</p>
+<p>I&rsquo;m originally from San Diego, California but I currently live in Minneapolis, Minnesota. I&rsquo;ve thoroughly enjoyed exploring the Twin Cities during my time here and to the surprise of friends and family in California, I&rsquo;ve also enjoyed the long Minnesota winters.</p>
+
+<p>Beyond the workplace, I enjoy spending my free time playing the bagpipes, trying new restaurants, playing disc golf, exercising, and, <strong>of course</strong>, listening to podcasts.</p>
 
       </div>
     </div>
