--- a/portfolio/metcouncil/index.html
+++ b/portfolio/metcouncil/index.html
@@ -117,9 +117,13 @@ if (!doNotTrack) {
          <h1>Water Supply Planning at the Met Council</h1>
          <p>Since June of 2019, I have been an intern in the Water Supply Planning unit of the Metropolitan Council of the Twin Cities.</p>
 
-<p>The text for this page is in progress!</p>
+<p>As a Water Supply Planning and Analysis Intern, most of my days are spent compiling and analyzing data from local water supply plans as well as developing graphics and maps to share with communities and other stakeholders.</p>
+
+<p>Before I was offered the opportunity to stay on with the Council until May of 2020, I was tasked with creating a poster that summarized the projects I had done during my summer in the Water Supply Planning unit. The poster below is a piece that showcases the analytical and design-forward work that I take part in on a daily basis.</p>
 
 <p><img src="/img/portfolio/MetCouncil_Poster_Portfolio.png" alt="poster" /></p>
+
+<p>Coming into this internship with little knowledge of water supply planning, it would be an understatement to say that I have learned a lot. While I couldn&rsquo;t tell you nearly as much about regional planning or hydrogeology as my coworkers and supervisors, I&rsquo;d be happy to talk your ear off about emergency interconnections or the importance of water supply in a place as bountiful as Minnesota (with its 10,000 lakes and all that&hellip;).</p>
          
       </div>
     </div>
