--- a/portfolio/work4/index.html
+++ b/portfolio/work4/index.html
@@ -115,7 +115,9 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Urban GIS: Northside Achievement Zone</h1>
-         <p>One of the most meaningful classes I took while at Macalester was Urban GIS. The semester that I took Urban GIS our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
+         <p>One of the most meaningful classes I took while at Macalester was Urban GIS. The semester that I took Urban GIS, our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
+
+<p>The Northside Achievement Zone takes a holistic and intensive approach to narrowing the achievement gap by working with students from the beginning of formal education to college acceptances.</p>
 
 <h2 id="northside-achievement-zone-website"><strong>Northside Achievement Zone Website:</strong></h2>
 
