--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -117,7 +117,7 @@ if (!doNotTrack) {
          <h1>Brushing Up and Starting Fresh: Esri Story Maps, Adobe Animate, and Fire Ecology</h1>
          <p>One of my favorite classes at Macalester was Advanced Cartography and Geovisualization. For one of the assignments, I was tasked with creating a dynamic visualization using a new or somewhat unfamiliar platform. Interested in learning about animation in Adobe, I decided to create a series of short animations to illustrate concepts in fire ecology (a field that I have long been curious about but have not studied in detail). Wanting to stay up to date with Esri Story Maps, I decided to use this as a platform to host my animations.</p>
 
-<p>Below is the link to my final dynamic visualization submission. I am proud of the progress I made using Adobe Animate and I&rsquo;m excited to use this skill for future projects both academic and professional. In particular, I would like to revisit animated cartography and see how I could expand beyond my 2018 California wildfires map.</p>
+<p>Below is the link to my final dynamic visualization submission. I am proud of the progress I made using Adobe Animate and I&rsquo;m excited to use this skill for future projects both in my professional life and just for fun. In particular, I would like to revisit animated cartography and dynamic storytelling to see how I might expand beyond my 2018 California wildfires map.</p>
 
 <blockquote>
 <h2 id="https-macgis-maps-arcgis-com-apps-cascade-index-html-appid-3b3cb0e9190a4952ab310e80eaaf42a6"><em><a href="https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6">https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6</a></em></h2>
