--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -301,7 +301,7 @@ if (!doNotTrack) {
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>One of the most meaningful classes I took while at Macalester was Urban GIS. The semester that I took Urban GIS our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
+                                  <p>One of the most meaningful classes I took while at Macalester was Urban GIS. The semester that I took Urban GIS, our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
                                 
                             </p>
                           </div>
