--- a/portfolio/culturalatlas/index.html
+++ b/portfolio/culturalatlas/index.html
@@ -115,11 +115,25 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Cultural Atlas Production</h1>
-         <p>The text for this page is in progress!</p>
+         <p>In the spring of 2019 I was fortunate enough to be a teaching assistant (TA) for a fantastic class at Macalester College called Cultural Atlas Production.</p>
 
-<p>The text for this page is in progress!</p>
+<p>Inspired by cartographers and visual storytellers such as Rebecca Solnit, James Cheshire, Oliver Uberti, and others, our class set out to create an atlas of Saint Paul over the course of a single semester.</p>
+
+<p>As a teaching assistant for this class, I had the pleasure of both participating in the creation of the atlas (I designed my own spread as well as the dedications page) and mentoring students during their own design processes.</p>
 
 <p><img src="/img/portfolio/atlas_spread.png" alt="spread" /></p>
+
+<p>I most appreciate and am excited by projects or assignments that carry an idea from its infancy through brainstorming, drafting, revising, and all the way to final publication or presentation. Working on this atlas, I was able to experience that process as an individual, as a member of a team, and as an instructor.</p>
+
+<p>&ndash;</p>
+
+<p>If you haven&rsquo;t had a chance to check out this atlas in full, I highly recommend it.</p>
+
+<p><strong><a href="https://issuu.com/maccarto/docs/curiouscity">https://issuu.com/maccarto/docs/curiouscity</a></strong></p>
+
+<p>If you want to learn more about the process, here&rsquo;s a talk from NACIS 2019 by our (wonderful) instructor Ashley Nepp.</p>
+
+<p><strong><a href="https://www.youtube.com/watch?v=CItyMTbnPZM&amp;list=PLcBEhOBZvhcbJk4y05GrXYh4G0iRGUqVF&amp;index=44">https://www.youtube.com/watch?v=CItyMTbnPZM&amp;list=PLcBEhOBZvhcbJk4y05GrXYh4G0iRGUqVF&amp;index=44</a></strong></p>
 
 <p><img src="/img/portfolio/dedicationspage.png" alt="dedications" /></p>
          
