--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -205,7 +205,7 @@ if (!doNotTrack) {
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>The text for this page is in progress!</p>
+                                  <p>In the spring of 2019 I was fortunate enough to be a teaching assistant (TA) for a fantastic class at Macalester College called Cultural Atlas Production.</p>
                                 
                             </p>
                           </div>
