--- a/portfolio/wsp_fieldguide/index.html
+++ b/portfolio/wsp_fieldguide/index.html
@@ -123,7 +123,7 @@ if (!doNotTrack) {
 
 <p><img src="/img/portfolio/WSP_FieldGuide/Cover.png" alt="Cover" />
 <img src="/img/portfolio/WSP_FieldGuide/ChapterDivider.png" alt="ChapterDivider" />
-<img src="/img/portfolio/WSP_FieldGuide/Drink_Sketch.jpg" alt="DS" />
+<img src="/img/portfolio/WSP_FieldGuide/Drink_Sketch.jpeg" alt="DS" />
 <img src="/img/portfolio/WSP_FieldGuide/TheDrink.png" alt="D" />
 <img src="/img/portfolio/WSP_FieldGuide/Highland_Sketch.jpg" alt="HS" />
 <img src="/img/portfolio/WSP_FieldGuide/HighlandParkWater.png" alt="H" />
